<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".thirdlayout">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:text="@string/textview_nombre3" />

    <EditText
        android:id="@+id/editText_nombre3"
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:text="@string/button_acept_atras" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:text="@string/button_acept_principio" />

    <TextView
        android:id="@+id/textView_nombre4"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView_nombre5"
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:text="TextView" />
</LinearLayout>